# nixos-pods

./: .gitignore  .gitmodules  LICENSE  cabal.project  flake.nix
dhall/: base.dhall  package.dhall  services.dhall
dhall/stacks/: base.dhall  controller.dhall
example/nixos-minimal/: configuration.nix  flake.nix  id_ed25519  id_ed25519.pub
hspkg/: nixos-pods.cabal
hspkg/exe/deploy/: Embed.hs  Main.hs  Options.hs  base.dhall  controller.dhall
hspkg/src/: MyLib.hs
hspkg/src/NixOS/: CacheCompressor.hs
hspkg/src/NixOS/Infra/: Amazonka.hs  Logger.hs
hspkg/test/: Main.hs
nix/: dhall.nix  haskell-overrides.nix  haskell.nix  shells.nix
pkg/: nixos-pods.cabal
pkg/exe/data-compressor-lambda/: Main.hs
pkg/exe/store-pod-lambda/: Main.hs
pkg/exe/tool/: Main.hs
pkg/src/NixosPods/: DataCompressor.hs  Dhall.hs  Prelude.hs  StorePod.hs  Tool.hs
pkg/src/NixosPods/Dhall/: TH.hs  TH0.hs  TH1.hs
pkg/src/NixosPods/Infra/: Amazonka.hs  Clock.hs  Logger.hs  UUID.hs
pkg/src/NixosPods/Infra/Amazonka/: ECRHelper.hs
pkg/src/NixosPods/Tool/: Command.hs  Environment.hs  Options.hs
pkg/src/NixosPods/Tool/Command/: Deploy.hs
