cabal-version:      3.4
name:               nixos-pods
version:            0.1.0.0
synopsis:           NixOS Pods
license:            BSD-3-Clause
author:             kokobd
maintainer:         contact@zelinf.net
category:           Web
build-type:         Simple

common opts
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        LambdaCase
        DataKinds
        TypeOperators
        GADTs
        KindSignatures
        ScopedTypeVariables
        TypeApplications
        TypeFamilies
        NoImplicitPrelude
        DuplicateRecordFields
        NoFieldSelectors
    build-depends:
        base
      , amazonka
      , amazonka-dynamodb
      , amazonka-ec2
      , amazonka-s3
      , dhall
      , dhall-json
      , effectful
      , effectful-core
      , effectful-th
      , envparse
      , file-embed
      , generic-lens
      , hal
      , lens
      , monad-logger
      , monad-logger-aeson
      , mtl
      , relude
      , servant
      , servant-server
      , transformers
      , wai-handler-hal
      , warp
      , amazonka-cloudformation
      , hoist-error
      , uuid
      , conduit

library
    import:           opts
    exposed-modules:
        MyLib
        NixOS.CacheCompressor
        NixOS.Infra.Logger
        NixOS.Infra.Amazonka
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

test-suite tests
    import:           opts
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        nixos-pods
      , tasty
      , tasty-hunit

common exe-opts
    import:           opts
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    nixos-pods

executable data-compressor-job
    import:           exe-opts
    main-is:          Main.hs
    hs-source-dirs:   exe/data-compressor-job

executable data-compressor-lambda
    import:           exe-opts
    main-is:          Main.hs
    hs-source-dirs:   exe/data-compressor-lambda

executable deploy
    import:           exe-opts
    main-is:          Main.hs
    hs-source-dirs:   exe/deploy
    other-modules:
        Options
        Embed
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-I0 -qg"
    build-depends:    optparse-applicative
